--- a/testeSocket.html
+++ b/testeSocket.html
@@ -244,8 +244,8 @@
   </div>
 
   <script>
-    //const socket = io('https://pontoparse.herokuapp.com/');
-    const socket = io('http://localhost:3333');
+    const socket = io('https://pontoparse.herokuapp.com/');
+    //const socket = io('http://localhost:3333');
     const messagesElement = document.getElementById('messages');
     const messageInput = document.getElementById('message-input');
 
