--- a/testeSocket.html
+++ b/testeSocket.html
@@ -217,11 +217,11 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      width: 40px;
-      height: 40px;
+      width: 25px;
+      height: 25px;
       border-radius: 50%;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 10px;
       margin-right: 10px;
     }
   </style>
@@ -313,6 +313,8 @@
         bubbleColor: getRandomColor()
       }
 
+      console.log(message)
+
       if (message.message.trim() !== '') {
         socket.emit('chat message', message);
         messageInput.value = '';
@@ -339,6 +341,8 @@
     }
 
     socket.on('chat message', (msg) => {
+
+      console.log(msg)
 
       const messageContainer = document.createElement('div');
       messageContainer.classList.add('message-container');
@@ -394,11 +398,11 @@
       cachedMessages.forEach((msg) => {
 
         console.log(msg)
-        addMessageToChat(msg.user, msg.text, msg.timestamp); // Adicione a mensagem com o timestamp
+        addMessageToChat(msg.user, msg.text, msg.timestamp, msg.bubbleColor); // Adicione a mensagem com o timestamp
       });
     });
 
-    function addMessageToChat(user, text, timestamp) {
+    function addMessageToChat(user, text, timestamp, bubbleColor) {
       const messageContainer = document.createElement('div');
       messageContainer.classList.add('message-container');
 
@@ -407,8 +411,10 @@
 
       if (!isOwnMessage) {
         const userNameElement = document.createElement('div');
-        userNameElement.textContent = user;
-        userNameElement.classList.add('user-name');
+        userNameElement.textContent = getInitials(user);
+        userNameElement.classList.add('user-initials');
+        userNameElement.setAttribute('title', user);
+        userNameElement.style.backgroundColor = bubbleColor;
         messageContainer.appendChild(userNameElement);
       }
 
