--- a/testeSocket.html
+++ b/testeSocket.html
@@ -1,244 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Socket.IO Chat Example</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-
-    }
-
-    .chat-container {
-
-      margin: 0 auto;
-      padding: 20px;
-
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .messages {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      height: 500px;
-      overflow-y: auto;
-    }
-
-    .message-container {
-      display: flex;
-      flex-direction: column;
-
-      margin-bottom: 15px;
-    }
-
-    .own .message-container {
-      align-items: flex-end;
-    }
-
-    .message {
-      background-color: #e5f6ff;
-      color: #333;
-      border-radius: 15px;
-      padding: 12px 18px;
-      max-width: 70%;
-      word-wrap: break-word;
-    }
-
-    .own .message {
-      background-color: #1976d2;
-      color: white;
-    }
-
-    .own .message {
-      align-self: flex-end;
-    }
-
-    .user-name {
-      font-size: 12px;
-      font-weight: bold;
-      margin-bottom: 4px;
-      color: #888;
-    }
-
-    .input-container {
-      display: flex;
-      margin-top: 15px;
-    }
-
-    .input-field {
-      flex-grow: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .input-button {
-      padding: 10px 18px;
-      background-color: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    h1,
-    h2 {
-      margin: 0;
-      padding: 0;
-      font-weight: bold;
-      color: #333;
-    }
-
-    .messages {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      height: 500px;
-      overflow-y: auto;
-      padding-right: 10px;
-      scrollbar-width: thin;
-      scrollbar-color: #ccc transparent;
-    }
-
-    .messages::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    .messages::-webkit-scrollbar-thumb {
-      background-color: #bbb;
-      border-radius: 10px;
-    }
-
-    .messages::-webkit-scrollbar-thumb:hover {
-      background-color: #999;
-    }
-
-    .messages::-webkit-scrollbar-track {
-      background-color: transparent;
-    }
-
-    .own .message-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      margin-bottom: 15px;
-    }
-
-    .own .user-name {
-      text-align: right;
-      /* Alinhar o nome de usuário à direita */
-      color: #888;
-      font-size: 12px;
-      font-weight: bold;
-      margin-bottom: 4px;
-    }
-
-    .own .message {
-      background-color: #f2f2f2;
-      color: #333;
-      border-radius: 15px;
-      padding: 12px 18px;
-      max-width: 70%;
-      word-wrap: break-word;
-      text-align: right;
-      /* Alinhar a mensagem à direita */
-    }
-
-    .own .timestamp {
-      text-align: right;
-      /* Alinhar a data e hora à direita */
-      font-size: 10px;
-      color: #888;
-      margin-top: 4px;
-    }
-
-    .own .message-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      margin-bottom: 5px;
-      /* Espaçamento entre as mensagens */
-    }
-
-    .other .message-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      margin-bottom: 5px;
-      /* Espaçamento entre as mensagens */
-    }
-
-    .message {
-      border-radius: 15px;
-      padding: 12px 18px;
-      max-width: 70%;
-      word-wrap: break-word;
-      margin-top: 2px;
-      /* Espaçamento entre a mensagem e a hora */
-    }
-
-    .own .message {
-      background-color: #1976d2;
-      color: white;
-      text-align: right;
-      /* Alinhar a mensagem do próprio usuário à direita */
-    }
-
-    .other .message {
-      background-color: #e5f6ff;
-      color: #333;
-      text-align: left;
-      /* Alinhar a mensagem do outro usuário à esquerda */
-    }
-
-    .timestamp {
-      font-size: 10px;
-      color: #888;
-    }
-
-    .system-message {
-      text-align: left;
-      margin-bottom: 10px;
-    }
-
-    .system-message-text {
-
-      border-radius: 8px;
-      padding: 8px 12px;
-      max-width: 70%;
-      word-wrap: break-word;
-    }
-
-    .user-initials {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      font-weight: bold;
-      font-size: 10px;
-      margin-right: 10px;
-    }
-  </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="estilo-chat.css">
 </head>
-
 <body>
   <div class="chat-container">
-
-
     <div class="input-container">
       <input class="input-field" type="text" id="room" placeholder="Sala" />
       <input class="input-field" type="text" id="name" placeholder="Nome de Usuário" />
       <button class="input-button" id="join-button">Entrar na Sala</button>
     </div>
-
     <div id="chat" style="display:none;">
       <div style="display:none;">
         <h6>Sala: <span id="current-room"></span></h6>
@@ -250,238 +23,10 @@
         <button class="btn input-button" id="submit-button" type="submit">
           Enviar
         </button>
-
       </form>
     </div>
   </div>
-
-  <script>
-    const socket = io('https://pontoparse.herokuapp.com/');
-    //const socket = io('http://localhost:3333');
-    const messagesElement = document.getElementById('messages');
-    const messageInput = document.getElementById('message-input');
-
-    const urlSearchParams = new URLSearchParams(window.location.search);
-    const roomFromURL = urlSearchParams.get('room');
-    const nameFromURL = urlSearchParams.get('name');
-
-    document.getElementById('room').value = roomFromURL;
-    document.getElementById('name').value = nameFromURL;
-
-    if (roomFromURL && nameFromURL) {
-      openChat(roomFromURL, nameFromURL);
-    }
-
-
-    const typingIndicatorTimeout = 1000; // Tempo em milissegundos para aguardar antes de enviar o evento de "parou de digitar"
-
-    let isTyping = false;
-    let typingTimeout;
-
-    // Listener para detectar quando o usuário começa a digitar
-    messageInput.addEventListener('input', () => {
-
-      if (!isTyping) {
-        isTyping = true;
-        socket.emit('user typing', nameFromURL, true);
-      }
-
-      clearTimeout(typingTimeout);
-      typingTimeout = setTimeout(() => {
-        isTyping = false;
-        socket.emit('user typing', nameFromURL, false);
-      }, typingIndicatorTimeout);
-    });
-
-
-    document.getElementById('submit-button').addEventListener('click', (event) => {
-      event.preventDefault();
-      const timestampOptions = {
-        hour: 'numeric',
-        minute: 'numeric',
-        second: 'numeric',
-        day: 'numeric',
-        month: 'numeric',
-        year: 'numeric',
-        timeZone: 'America/Sao_Paulo'
-      };
-      const timestamp = new Date().toLocaleString('pt-BR', timestampOptions);
-
-      const message = {
-        message: messageInput.value,
-        timestamp,
-        bubbleColor: getRandomColor()
-      }
-
-      console.log(message)
-
-      if (message.message.trim() !== '') {
-        socket.emit('chat message', message);
-        messageInput.value = '';
-      }
-    });
-
-    document.getElementById('join-button').addEventListener('click', () => {
-      const room = document.getElementById('room').value;
-      const name = document.getElementById('name').value;
-
-      if (room.trim() !== '' && name.trim() !== '') {
-        openChat(room, name);
-      }
-    });
-
-    function openChat(room, name) {
-      socket.emit('join room', { room, name });
-
-      addSystemMessage(`${name} entrou na sala.`);
-
-      document.querySelector('.input-container').style.display = 'none';
-      document.getElementById('chat').style.display = 'block';
-      document.getElementById('current-room').textContent = room;
-    }
-
-    socket.on('chat message', (msg) => {
-
-      console.log(msg)
-
-      const messageContainer = document.createElement('div');
-      messageContainer.classList.add('message-container');
-
-      if (msg.user.toLowerCase() === nameFromURL.toLowerCase()) {
-        messageContainer.classList.add('own');
-      }
-
-
-
-      const isOwnMessage = msg.user.toLowerCase() === nameFromURL.toLowerCase();
-      if (!isOwnMessage) {
-        const userInitials = document.createElement('div');
-        userInitials.textContent = getInitials(msg.user);
-        userInitials.classList.add('user-initials');
-        userInitials.style.backgroundColor = msg.bubbleColor;
-        userInitials.setAttribute('title', msg.user);
-        messageContainer.appendChild(userInitials);
-      }
-
-      const userNameElement = document.createElement('div');
-      userNameElement.textContent = msg.user === nameFromURL.toLowerCase() ? '' : msg.user;
-      userNameElement.classList.add('user-name');
-      messageContainer.appendChild(userNameElement);
-
-      const messageElement = document.createElement('div');
-      messageElement.textContent = msg.text;
-      messageElement.classList.add('message');
-      messageContainer.appendChild(messageElement);
-
-      const timestampElement = document.createElement('div');
-      const timestampOptions = {
-        hour: 'numeric',
-        minute: 'numeric',
-        second: 'numeric',
-        day: 'numeric',
-        month: 'numeric',
-        year: 'numeric',
-        timeZone: 'America/Sao_Paulo'
-      };
-      const timestamp = new Date().toLocaleString('pt-BR', timestampOptions);
-      timestampElement.textContent = timestamp;
-      timestampElement.classList.add('timestamp');
-      messageContainer.appendChild(timestampElement);
-
-
-      messagesElement.appendChild(messageContainer);
-      messagesElement.scrollTop = messagesElement.scrollHeight;
-    });
-
-    // Listener para receber o histórico de mensagens em cache
-    socket.on('cached messages', (cachedMessages) => {
-      cachedMessages.forEach((msg) => {
-
-        console.log(msg)
-        addMessageToChat(msg.user, msg.text, msg.timestamp, msg.bubbleColor); // Adicione a mensagem com o timestamp
-      });
-    });
-
-    function addMessageToChat(user, text, timestamp, bubbleColor) {
-      const messageContainer = document.createElement('div');
-      messageContainer.classList.add('message-container');
-
-      const isOwnMessage = user.toLowerCase() === nameFromURL.toLowerCase();
-      messageContainer.classList.add(isOwnMessage ? 'own' : 'other'); // Adiciona a classe 'own' ou 'other'
-
-      if (!isOwnMessage) {
-        const userNameElement = document.createElement('div');
-        userNameElement.textContent = getInitials(user);
-        userNameElement.classList.add('user-initials');
-        userNameElement.setAttribute('title', user);
-        userNameElement.style.backgroundColor = bubbleColor;
-        messageContainer.appendChild(userNameElement);
-      }
-
-      const messageElement = document.createElement('div');
-      messageElement.textContent = text;
-      messageElement.classList.add('message');
-      messageContainer.appendChild(messageElement);
-
-      const timestampElement = document.createElement('div');
-      timestampElement.textContent = timestamp;
-      timestampElement.classList.add('timestamp');
-      messageContainer.appendChild(timestampElement);
-
-      messagesElement.appendChild(messageContainer);
-      messagesElement.scrollTop = messagesElement.scrollHeight;
-    }
-
-    function addSystemMessage(message) {
-      const messageContainer = document.createElement('div');
-      messageContainer.classList.add('user-name', 'system-message'); // Adiciona a classe 'system-message'
-
-      const messageElement = document.createElement('div');
-      messageElement.textContent = message;
-      messageElement.classList.add('user-name', 'system-message-text'); // Adiciona a classe 'system-message-text'
-      messageContainer.appendChild(messageElement);
-
-      messagesElement.appendChild(messageContainer);
-      messagesElement.scrollTop = messagesElement.scrollHeight;
-    }
-
-    // Evento para notificar quando um usuário entra na sala
-    socket.on('user joined', (username) => {
-      addSystemMessage(`📍${username} entrou.`);
-    });
-
-    // Evento para notificar quando um usuário sai da sala
-    socket.on('user left', (username) => {
-      addSystemMessage(`📍${username} saiu.`);
-    });
-
-
-    socket.on('user typing', ({ username, isTyping }) => {
-      const typingIndicator = document.getElementById('typing-indicator');
-
-      if (isTyping) {
-        typingIndicator.textContent = nameFromURL.toLowerCase() === username.toLowerCase() ? '' : `${username} está digitando...`;
-      } else {
-        typingIndicator.textContent = '';
-      }
-    });
-
-    function getInitials(name) {
-      const words = name.split(' ');
-      if (words.length >= 2) {
-        return (words[0][0] + words[1][0]).toUpperCase();
-      } else if (words.length === 1) {
-        return words[0].slice(0, 2).toUpperCase();
-      }
-      return '';
-    }
-
-    function getRandomColor() {
-      const colors = ['#33A0FF'];
-      return colors[Math.floor(Math.random() * colors.length)];
-    }
-
-  </script>
 </body>
-
+<script src="socket-chat.js"></script>
+<script src="functions-chat.js"></script>
 </html>
