--- a/testeSocket.html
+++ b/testeSocket.html
@@ -44,7 +44,7 @@
         <button class="btn input-button" id="submit-button" type="submit">
           Enviar
         </button>
-      </form><br>
+      </form>
       <button class="input-button" id="user-list-button">Lista de Usuários</button>
     </div>
   </div>
