--- a/testeSocket.html
+++ b/testeSocket.html
@@ -46,8 +46,8 @@
     <button class="input-button" id="close-popup-button">Fechar</button>
   </div>
 
-  <script src="socket-chat.js"></script>
-  <script src="functions-chat.js"></script>
+  <script src="socket-chat.js?id=1"></script>
+  <script src="functions-chat.js?id=1"></script>
 
 </body>
 
