--- a/testeSocket.html
+++ b/testeSocket.html
@@ -56,7 +56,7 @@
     <ul id="user-list" class="user-list-scroll">
 
     </ul>
-    <button class="input-button" id="close-popup-button">Fechar</button>
+    <button class="btn btn-primary  btn-sm" id="close-popup-button">Fechar</button>
   </div>
 
   <script src="socket-chat.js"></script>
