--- a/testeSocket.html
+++ b/testeSocket.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Connect Team</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
   <link rel="stylesheet" type="text/css" href="estilo-chat.css">
   <link rel="stylesheet" type="text/css" href="toast.css">
   <script src="toastLib.js"></script>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <style>
-
+    /* Seus estilos personalizados aqui */
   </style>
 </head>
 
@@ -34,18 +34,12 @@
       <div id="typing-indicator" class="user-name"></div>
       <form class="input-container" id="chat-form">
         <input class="input-field" id="message-input" type="text" placeholder="Digite sua mensagem" />
-
-        <!-- <input type="file" id="file-input" /> Campo de entrada de arquivo -->
-
         <button class="btn btn-primary btn-sm" id="submit-button" type="submit">
           Enviar
         </button>
-
-
       </form>
       <br>
-      <button class="btn btn-primary  btn-sm" id="user-list-button">Lista de Usuários</button>
-
+      <button class="btn btn-primary btn-sm" id="user-list-button">Lista de Usuários</button>
     </div>
   </div>
 
@@ -53,15 +47,12 @@
     <h6>Usuários Conectados:</h6>
     <input type="text" id="search-user" placeholder="Buscar usuário">
     <hr>
-    <ul id="user-list" class="user-list-scroll">
-
-    </ul>
-    <button class="btn btn-primary  btn-sm" id="close-popup-button">Fechar</button>
+    <ul id="user-list" class="user-list-scroll"></ul>
+    <button class="btn btn-primary btn-sm" id="close-popup-button">Fechar</button>
   </div>
 
   <script src="socket-chat.js"></script>
   <script src="functions-chat.js"></script>
-
 </body>
 
 </html>
