--- a/testeSocket.html
+++ b/testeSocket.html
@@ -117,6 +117,7 @@
        
         messageInput.value = String.fromCodePoint(parseInt(emoji, 16));
       }
+      toggleWebpagePopup()
     });
 
   </script>
