--- a/frameset.html
+++ b/frameset.html
@@ -46,11 +46,12 @@
 
   .highlighted-user {
     font-weight: bold;
-    font-size: 14px;
-
+    color: #0d6efd;
+   
     text-transform: capitalize;
 
   }
+  
 </style>
 
 <body>
@@ -70,7 +71,7 @@
   </div>
 
 </body>
-<script src="socket-room.js"></script>
+<script src="socket-room.js?id=100"></script>
 <script>
   window.addEventListener('message', (event) => {
 
