--- a/frameset.html
+++ b/frameset.html
@@ -88,6 +88,7 @@
 
      if(event.data === 'message-sidebar'){
         document.getElementById('open-sidebar').click()
+       return
      }
 
     const message = 'Olá, elemento pai!';
