--- a/frameset.html
+++ b/frameset.html
@@ -87,7 +87,8 @@
   window.addEventListener('message', (event) => {
     event.preventDefault();
      if(event.data === 'message-sidebar'){
-        document.getElementById('open-sidebar').click()
+        document.getElementById('open-sidebar').click();
+       return
      }
 
     const message = 'Olá, elemento pai!';
