--- a/chat.html
+++ b/chat.html
@@ -43,9 +43,9 @@
 <body>
   <div class="chat-container" id="chat-container">
     <div class="input-container">
-      <input class="input-field" type="text" id="room" placeholder="Sala" />
-      <input class="input-field" type="text" id="name" placeholder="Nome de Usuário" />
-      <button class="input-button" id="join-button">Entrar na Sala</button>
+      <!-- <input class="input-field" type="text" id="room" placeholder="Sala" />
+      <input class="input-field" type="text" id="name" placeholder="Nome de Usuário" /> -->
+      <!-- <button class="input-button" id="join-button">Entrar na Sala</button> -->
     </div>
 
     <div id="chat">
