--- a/chat.html
+++ b/chat.html
@@ -61,8 +61,8 @@
         </label>
         <input type="file" id="image-input" accept="image/*">
 
-        <button id="recordBtn">Iniciar Gravação de Voz</button>
-       
+        <!-- <button id="recordBtn">Iniciar Gravação de Voz</button>
+        -->
 
         <button class="btn btn-secondary btn-sm" id="emoji-button" type="button" onclick="toggleWebpagePopup()">
           😃
