--- a/chat.html
+++ b/chat.html
@@ -60,19 +60,15 @@
           📸
         </label>
         <input type="file" id="image-input" accept="image/*">
-
-        <!-- <button id="recordBtn">Iniciar Gravação de Voz</button>
-        -->
-
         <button class="btn btn-secondary btn-sm" id="emoji-button" type="button" onclick="toggleWebpagePopup()">
           😃
         </button>
         <button class="btn btn-primary btn-sm" id="submit-button" type="submit">
           Enviar
         </button>
-
       </form>
       <br>
+      <button id="recordBtn" class="btn btn-primary btn-sm" >Iniciar Gravação de Voz</button>
       <button class="btn btn-primary btn-sm" id="user-list-button" onclick="toggleUserListPopup()">Mencionar @</button>
       <button class="btn btn-primary btn-sm" id="user-list-button"
         onclick="toggleUserListPostMessage()">Usuários</button>
