--- a/frameset.html
+++ b/frameset.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
   <link rel="stylesheet" type="text/css" href="estilo-chat.css">
   <link rel="stylesheet" type="text/css" href="toast.css">
-  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://dominio-do-iframe.com;">
+  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://wilkor.github.io;">
   <script src="toastLib.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
