--- a/chat.html
+++ b/chat.html
@@ -68,7 +68,7 @@
         </button>
       </form>
       <br>
-      <button id="recordBtn" class="btn btn-primary btn-sm" >Iniciar Gravação de Voz</button>
+      <!-- <button id="recordBtn" class="btn btn-primary btn-sm" >Iniciar Gravação de Voz</button> -->
       <button class="btn btn-primary btn-sm" id="user-list-button" onclick="toggleUserListPopup()">Mencionar @</button>
       <button class="btn btn-primary btn-sm" id="user-list-button"
         onclick="toggleUserListPostMessage()">Usuários</button>
