--- a/chat.html
+++ b/chat.html
@@ -70,8 +70,8 @@
       <br>
       <!-- <button id="recordBtn" class="btn btn-primary btn-sm" >Iniciar Gravação de Voz</button> -->
       <button class="btn btn-primary btn-sm" id="user-list-button" onclick="toggleUserListPopup()">Mencionar @</button>
-      <button class="btn btn-primary btn-sm" id="user-list-button"
-        onclick="toggleUserListPostMessage()">Usuários</button>
+      <!-- <button class="btn btn-primary btn-sm" id="user-list-button"
+        onclick="toggleUserListPostMessage()">Usuários</button> -->
     </div>
 
   </div>
