--- a/chat.html
+++ b/chat.html
@@ -38,10 +38,29 @@
       height: 100%;
       border: none;
     }
+
+    .splash-screen {
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      background-color: #ffffff;
+      z-index: 9999;
+    }
   </style>
 </head>
 
 <body>
+
+  <div class="splash-screen">
+    <img src="logo.jpeg" alt="Logo do App">
+    <h1>Connect Team</h1>
+  </div>
+
+
   <div class="chat-container" id="chat-container">
     <div class="input-container">
       <!-- <input class="input-field" type="text" id="room" placeholder="Sala" />
@@ -134,6 +153,13 @@
       toggleWebpagePopup()
     });
 
+
+    document.addEventListener("DOMContentLoaded", function () {
+    
+      setTimeout(function () {
+        document.querySelector('.splash-screen').style.display = 'none';
+      }, 2000);
+    });
   </script>
 
 
