--- a/chat.html
+++ b/chat.html
@@ -89,10 +89,10 @@
 
 <body>
 
-  <div class="splash-screen">
+  <!-- <div class="splash-screen">
     <img src="logo.jpeg" alt="Logo do App">
     <h1>Connect Team</h1>
-  </div>
+  </div> -->
 
 
   <div class="chat-container" id="chat-container">
@@ -127,6 +127,7 @@
       <button class="btn btn-secondary btn-sm" id="emoji-button" type="button" onclick="toggleWebpagePopup()">
         😃
       </button>
+      <button class="btn btn-primary btn-sm" id="user-list-button" onclick="toggleUserListPopup()">Mencionar @</button>
 
       <!-- <button class="btn btn-primary btn-sm" id="user-list-button"
         onclick="toggleUserListPostMessage()">Usuários</button> -->
