--- a/chat.html
+++ b/chat.html
@@ -127,7 +127,7 @@
       <button class="btn btn-secondary btn-sm" id="emoji-button" type="button" onclick="toggleWebpagePopup()">
         😃
       </button>
-      <button class="btn btn-primary btn-sm" id="user-list-button" onclick="refreshPage()">Atualizar</button>
+      <button class="btn btn-success btn-sm" id="user-list-button" onclick="refreshPage()">Atualizar</button>
 
       <!-- <button class="btn btn-primary btn-sm" id="user-list-button"
         onclick="toggleUserListPostMessage()">Usuários</button> -->
