--- a/chat.html
+++ b/chat.html
@@ -79,18 +79,10 @@
       height: 100%;
       border: none;
     }
+ #webpage-iframe1 {
 
-    .splash-screen {
-      position: fixed;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-      background-color: #ffffff;
-      z-index: 9999;
-    }
+  margin-left:-15px;
+ }
   </style>
 </head>
 
@@ -143,7 +135,7 @@
 
 
       <iframe id="webpage-iframe1" src="https://wilkor.github.io/plugin-input-chat-parse/" width="100%" height="105px"
-        style="background-color: transparent; position: absolute;"></iframe>
+        style="background-color: transparent"></iframe>
 
 
       <!-- <button class="btn btn-primary btn-sm" id="user-list-button"
