--- a/chat.html
+++ b/chat.html
@@ -79,11 +79,12 @@
       height: 100%;
       border: none;
     }
- #webpage-iframe1 {
 
-  margin-left:-2px;
-  margin-top: -30px;
- }
+    #webpage-iframe1 {
+
+      margin-left: -2px;
+      margin-top: -30px;
+    }
   </style>
 </head>
 
@@ -130,13 +131,17 @@
         <button class="btn btn-primary btn-sm" id="user-list-button" onclick="toggleUserListPopup()">Mencionar
           @</button>
 
+        <button id="recordBtn" class="btn btn-primary btn-sm">Iniciar Gravação de Voz</button>
+
       </div>
-      <!--       
-     <button id="recordBtn" class="btn btn-primary btn-sm" >Iniciar Gravação de Voz</button> -->
 
 
-      <iframe id="webpage-iframe1" src="https://wilkor.github.io/plugin-input-chat-parse/" width="100%" height="105px"
+      <!-- <iframe id="webpage-iframe1" src="https://wilkor.github.io/plugin-input-chat-parse/" width="100%" height="105px"
+        style="background-color: transparent"></iframe> -->
+
+      <iframe id="webpage-iframe1" src="http://localhost:3000/" width="100%" height="105px"
         style="background-color: transparent"></iframe>
+
 
 
       <!-- <button class="btn btn-primary btn-sm" id="user-list-button"
@@ -208,7 +213,15 @@
 
       }
 
-      let  iframe = document.getElementById('webpage-iframe1').contentWindow;
+      if (event.data.ref === 'front-audio') {
+
+           document.getElementById('recordBtn').click()
+
+      }
+
+
+
+      let iframe = document.getElementById('webpage-iframe1').contentWindow;
       iframe.postMessage({ emoji }, '*');
 
     });
