--- a/chat.html
+++ b/chat.html
@@ -135,11 +135,11 @@
 
       </div>
 
-
+      
       <iframe id="webpage-iframe1" src="https://wilkor.github.io/plugin-input-chat-parse/" width="100%" height="105px"
         style="background-color: transparent"></iframe>
-      <!-- 
-      <iframe id="webpage-iframe1" src="http://localhost:3000/" width="100%" height="105px"
+
+      <!-- <iframe id="webpage-iframe1" src="http://localhost:3000/" width="100%" height="98px"
         style="background-color: transparent"></iframe> -->
 
 
@@ -216,6 +216,13 @@
       if (event.data.ref === 'front-audio') {
 
         document.getElementById('recordBtn').click()
+
+      }
+
+
+      if (event.data.ref === 'front-mention') {
+
+        toggleUserListPopup()
 
       }
 
