--- a/chat.html
+++ b/chat.html
@@ -164,8 +164,8 @@
   </div>
 
 
-  <script src="/socket-chat.js"></script>
-  <script src="/functions-chat.js"></script>
+  <script src="socket-chat.js"></script>
+  <script src="functions-chat.js"></script>
 
   <script>
     function toggleUserListPopup() {
