--- a/chat.html
+++ b/chat.html
@@ -234,7 +234,7 @@
 
       if (event.data.ref === 'front-mention') {
 
-        document.getElementById('recordBtn').click()
+        toggleUserListPopup()
 
       }
 
