--- a/chat.html
+++ b/chat.html
@@ -23,9 +23,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#ffc000">
-  <meta name="msapplication-TileColor" content="#ffc000">
-  <meta name="theme-color" content="#ffc000">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#141414">
+  <meta name="msapplication-TileColor" content="#141414">
+  <meta name="theme-color" content="#141414">
 
 
   <meta name="apple-mobile-web-app-capable" content="yes">
