--- a/chat.html
+++ b/chat.html
@@ -135,7 +135,7 @@
 
       </div>
 
-      
+
       <iframe id="webpage-iframe1" src="https://wilkor.github.io/plugin-input-chat-parse/" width="100%" height="98px"
         style="background-color: transparent"></iframe>
 
@@ -227,12 +227,20 @@
         openUserListPopup()
       }
 
-      if(event.data.ref === 'front-mention-click') {
+      if (event.data.ref === 'front-mention-click') {
 
         let message = event.data.message
-        iframe.postMessage({ message, ref: 'front-mention-click'}, '*');
+        iframe.postMessage({ message, ref: 'front-mention-click' }, '*');
 
       }
+
+      if (event.data.ref === 'front-audio-stop') {
+
+        let message = event.data.message
+        iframe.postMessage({ message, ref: 'front-audio-stop' }, '*');
+
+      }
+
 
       iframe.postMessage({ emoji }, '*');
 
